--- a/styles/index.css
+++ b/styles/index.css
@@ -3,3 +3,12 @@
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
+
+@layer base {
+    html {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, #282A37, #292B38);
+        color: #fff;
+    }
+}
